# solid-succotash

./: -d  .coverage  .dockerignore  .env.backup  .env.docker.example  .env.example  .gitignore  .hintrc  .nojekyll  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM.md  AUTHENTICATION_FIX.md  BRANDING_GUIDE.md  CARD_WORKFLOW_TESTING_GUIDE.md  CARD_WORKFLOW_TEST_SUMMARY.md  CLOUDFLARE_DEPLOYMENT.md  CODE_QUALITY_FIXES_COMPLETE.md  CODE_QUALITY_SETUP.md  CONTACT_FORM_COMPLETE.md  CRITICAL_DUPLICATE_FIXES.md  CUSTOM_DOMAIN_SETUP.md  CUSTOM_DOMAIN_VERCEL_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_RENDER_VERCEL.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_READY.md  DEPLOY_CONTACT_FORM.md  DEPLOY_NOW.txt  DEPLOY_TRIGGER.txt  DESIGN_CONSISTENCY_ANALYSIS.md  DEV_START_HERE.sh  DJANGO_API_MIGRATION.md  DJANGO_FRONTEND_REMOVAL_COMPLETE.md  DNS_SETUP.md  DRIP_SEND_TERMUX.sh  Dockerfile  EMAIL_AUTOMATION_GUIDE.md  EMAIL_DELIVERABILITY_IMPROVEMENTS.md  (+161 more)
.continue/: config.yaml
.github/: copilot-instructions.md
agent-ui/: index.html  manifest.json  package-lock.json  package.json
api/: jwt.py  permissions.py  referrals_endpoints.py  serializers.py  test_admin_edit_amount.py  test_admin_reject_edit.py  test_double_approval.py  test_invariants.py  test_services_edge_cases.py  test_services_remaining.py  test_signup.py  test_virtual_card.py  test_wallet_balance.py  tests.py  urls.py  views.py
cards/: __init__.py  admin.py  apps.py  models.py  serializers.py  stripe_issuing.py  urls.py  views.py
chat/: admin.py  apps.py  models.py  urls.py  views.py
core/: admin.py  apps.py  context_processors.py  email_inbox_service.py  email_service.py  email_utils.py  email_utils_corrupted.py  forms.py  health_check.py  middleware.py  models.py  models.pyi  pdf_letterhead.py  tests.py  tests_email_clean.py  tests_email_isolated.py  tests_email_security.py  tests_email_simple.py  tests_email_simple.py.bak  urls.py  views.py
docs/: EMAIL_MANAGEMENT_GUIDE.md  PRE_COMMIT_GUIDE.md  mutation_artifacts_README.md
drip-templates/: day_01_welcome.html
emails/: marketing.html  welcome.html
frontend/: -d  .env.local.example  .env.production  .gitignore  AI_WRITING_GUIDE.md  COMPLIANCE_FIXES_COMPLETE.md  FRONTEND_COMPLETE.md  IMAGE_SETUP_INSTRUCTIONS.md  LOGO_IMPLEMENTATION.md  OG_IMAGES_README.md  README.md  SEO_IMPLEMENTATION_COMPLETE.md  TAWK_INTEGRATION_GUIDE.md  TAWK_QUICK_START.md  VIRTUAL_CARD_OPTIMIZATION.md  favicon-test.html  follow_up_payload.json  james_comprehensive_test.json  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  replace_card.py  run_frontend.sh  tailwind.config.js  teddy_official_distribution.json  test_sync_look.json  tsconfig.json  vercel.json  wolv_tokenomics_action.json
investments/: admin.py  models.py  models.pyi  serializers.py  services.py  tests.py  urls.py  views.py
ops/: cloudflare_dns_records.example.json
referrals/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  test_api.py  tests.py  urls.py  views.py
templates/: 404.html  500.html  base.html  (+1 more)
(+603 files in other folders)
